# scene-text-recognition

./: .gitignore  README.md  pyproject.toml
scene_text_recognition/: tokenizer.py
scene_text_recognition/configs/: schemas.py
scene_text_recognition/frameworks/: aed.py  ctc.py  schemas.py
scene_text_recognition/models/: utils.py
scene_text_recognition/models/decoder/: ctc.py  transformer.py
scene_text_recognition/models/encoder/: schamas.py  transformer.py
scene_text_recognition/models/feature_extractor/: cnn.py  schemas.py
src/models/: utils.py
src/models/encoder/: transformer.py
src/models/feature_extractor/: cnn.py
tests/: test_aed.py  test_resnet_v2_mnist.py
