[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scene-text-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.0",
    "opencv-python>=4.12.0.88",
    "pytest>=9.0.2",
    "timm>=1.0.22",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["scene_text_recognition"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
